image overflow issue

--- a/src/pages/ProductPage.css
+++ b/src/pages/ProductPage.css
@@ -205,7 +205,7 @@
 
 .product-image-container {
   position: relative;
-  width: 100%;
+  width: 88%;
   height: 100%;
   overflow: hidden;
 }
